# VibeVoice-main

./: README.md  README_EN.md  VibeVoice_Part1_原理篇.md  VibeVoice_Part2_TTS实现篇.md  VibeVoice_Part3_ASR实现篇.md  VibeVoice深度解析_CSDN技术博客.md  prompt_construction_analysis.md  prompt_construction_demo.py  pyproject.toml  task_3_1_completion_summary.md  vibevoice_architecture_overview.md  vibevoice_functions_reference.md  vibevoice_modules_detail.md
.kiro/specs/vibevoice-deep-learning/: design.md  requirements.md  tasks.md
demo/: vibevoice_asr_gradio_demo.py  vibevoice_asr_inference_from_file.py  vibevoice_realtime_colab.ipynb
demo/web/: app.py
docs/: vibevoice-asr.md  vibevoice-realtime-0.5b.md  vibevoice-vllm-asr.md
finetuning-asr/: README.md
vibevoice/modular/: configuration_vibevoice.py  configuration_vibevoice_streaming.py  modeling_vibevoice_streaming_inference.py
vllm_plugin/: __init__.py  model.py
vllm_plugin/scripts/: install_deps.sh
vllm_plugin/tests/: test_api.py
