[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice"
version = "1.0.0"
authors = [
  { name="vibevoice team", email="VibeVoice@microsoft.com" },
]
description = "Open-Source Frontier Voice AI."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "accelerate",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
]

[project.optional-dependencies]
tts = [
  "transformers==4.51.3", # we develop this project on transformers==4.51.3, later version may not be compatible
  "av",
  "aiortc",
  "uvicorn[standard]",
  "fastapi"
]

asr = [
  "transformers>=4.51.3", # the versions after 4.51.3 are all support
  "pydub" # for visualization
]

vllm = [
  "transformers>=4.51.3",
  "fastapi",
  "uvicorn[standard]",
  "requests",
]

[project.entry-points."vllm.general_plugins"]
vibevoice = "vllm_plugin:register_vibevoice"

[project.urls]
"Homepage" = "https://github.com/microsoft/VibeVoice"
"Bug Tracker" = "https://github.com/microsoft/VibeVoice/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibevoice*", "vllm_plugin*"]
